--- a/config/database.yml
+++ b/config/database.yml
@@ -17,17 +17,17 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: dwdb.pontomais.com.br
-  port: 5432
-  username: pontomais
-  password: xbXrZyBHMzGrlY6lhT45
+  host: 192.168.18.107
+  port: 5435
+  username: postgres
+  password: postgres
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: projeto_teste
+  database: onebitjobs_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -85,6 +85,6 @@ test:
 #
 production:
   <<: *default
-  database: projeto_teste
+  database: onebitjobs_development
   username: blog
   password: <%= ENV['BLOG_DATABASE_PASSWORD'] %>
